[package]
name = "pasties"
version = "0.1.0"
edition = "2021"

[dependencies]
askama_axum = "0.4.0"
askama = { version = "0.12.1", features = ["with-axum"] }
axum = "0.7.5"
axum-macros = "0.4.1"
pulldown-cmark = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
sqlx = { version =  "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"